--- a/build.yaml
+++ b/build.yaml
@@ -22,3 +22,7 @@ include:
     shield: splitkb_aurora_sweep_left
   - board: nice_nano_v2
     shield: splitkb_aurora_sweep_right
+  - board: nice_nano_v2
+    shield: corne_left nice_view_adapter nice_view
+  - board: nice_nano_v2
+    shield: corne_right nice_view_adapter nice_view
